--- a/css/styles.css
+++ b/css/styles.css
@@ -502,6 +502,10 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
   color: #434455;
 }
 
+.strategy-section-paragraph {
+  font-weight: 500;
+}
+
 /* ============== STRATEGY TABLET ============== */
 
 @media screen and (min-width: 768px) {
@@ -534,6 +538,10 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
 
   .strategy {
     padding: 120px 0;
+  }
+
+  .strategy-section-paragraph {
+  font-weight: 400;
   }
 
   .strategy-list {
@@ -587,7 +595,7 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
 
 .team-list {
   display: flex;
-  justify-content: center;
+  align-items: center;
 }
 
 .team-list-item {
@@ -651,6 +659,7 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
       flex-wrap: wrap;
       column-gap: 24px;
       row-gap: 64px;
+      justify-content: center;
     }
   
     .team-list-item {
